# libhttpseverywhere

./: .gitignore  .gitlab-ci.yml  .gitmodules  BUILDING  CMakeLists.txt  README.md  httpseverywhere-0.4.deps  libhttpseverywhere.doap  meson.build  meson_options.txt  remove_inactive_rulesets.sh
archlinux/libhttpseverywhere-git/: PKGBUILD
data/: README.md
data/pc_gee_new/: httpseverywhere.pc
data/pc_gee_old/: httpseverywhere.pc
debian/: changelog  control  copyright  libhttpseverywhere.postinst  rules
httpseverywhere-0.2/: README
libhttpseverywhere-git/: PKGBUILD
src/: context.vala  https_everywhere.vala  meson.build  ruleset.vala  update.vala
test/: main.vala  meson.build
